# MLCookieCutter

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: auto-tag.yaml  release.yaml  test.yaml
mlcookiecutter/templates/: cnn_template.py  rnn_template.py  transformer_template.py
tests/: test_templates.py
