[tool.poetry]
name = "mlcookiecutter"
version = "0.1.0"
description = "A collection of customizable machine learning model templates for Python."
authors = ["j-raghavan"]
license = "Apache License 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
torch = "^2.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
